*** HEAD CONTENT *****************************************************************
**********************************************************************************
  
  What's new in this drop
  ================================================================================
  
  PRs Fixed in this Release
  ================================================================================
  1GL1I9F: ITPJCORE:WIN2000 - Wrong source mapping for binary methods with parameters with identical simple names
  1G4CIP0: ITPJUI:WIN - Source for binaries doesn't work for anonymous inner classes  
  1GD79XM: ITPJCORE:WINNT - Search - search for field references - not all found

  PRs Closed in this Release
  ===============================================================================
  1GL9UMH: ITPJCORE:WIN2000 - search: missing type occurrences
  1GKYXK5: ITPJUI:WIN2000 - usability: parameter hints 


**********************************************************************************
*** STABLE CONTENT (2.0 STREAM, v_203_03) ****************************************
**********************************************************************************
  
  What's new in this drop
  ================================================================================
  * Classpath entries (except for source folders) can be tagged as exported upon
    creation. When exported, an entry is contributed to dependent projects along 
    with its output location.
    Added APIs:
    
    Testing status of a given entry
     + IClasspathEntry.isExported()

    Creating entries with export flag
     + JavaCore.newProjectEntry(IPath, boolean)
     + JavaCore.newLibraryEntry(IPath, IPath, IPath, boolean)
     + JavaCore.newVariableEntry(IPath, boolean)
     
    Helper method computing a resolved and expanded path (all exports from prerequisites)
     + IJavaProject.getExpandedClasspath(boolean)

  * CodeAssist inserts qualification on field/method references in case of ambiguities.
